fix extra margin on webkit for element <i></i>

--- a/src/main/webapp/sys/css/style.css
+++ b/src/main/webapp/sys/css/style.css
@@ -82,7 +82,7 @@ select {
 	line-height: 22px !important;
 }
 
-i { margin-left: 10px; }
+/*i { margin-left: 10px; }*/
 span { font-size: 12px; }
 
 #leftMenu {
